crates/proc_macros_impl/tests/snapshots/svc_async__async_constructor.snap
---
source: crates/proc_macros_impl/tests/svc_async.rs
expression: expand_ffi!(item)
---
#[allow(clippy::used_underscore_items)]
const _: () = {
    const fn _assert_type_info<T: ::interoptopus::lang::types::TypeInfo>() {}
    _assert_type_info::<Service>();
    ::interoptopus::lang::types::assert_service_type::<Service>();
    {
        const fn _assert_async_ctor_runtime<
            T: ::interoptopus::pattern::asynk::AsyncRuntime
                + ::interoptopus::pattern::asynk::AsyncRuntimeService,
        >() {}
        _assert_async_ctor_runtime::<Runtime>();
    }
    ::interoptopus::lang::types::assert_service_ctor_safe::<
        ffi::Result<Service, Error>,
    >();
};
impl Service {
    pub async fn create(runtime: Async<Runtime>) -> ffi::Result<Self, Error> {
        ffi::Ok(Self)
    }
    pub fn method(&self) -> u32 {
        0
    }
}
#[allow(clippy::used_underscore_items, clippy::forget_non_drop)]
#[::interoptopus::ffi]
unsafe fn service_create(
    runtime: *const Runtime,
    callback: ::interoptopus::pattern::asynk::AsyncCallback<
        <::interoptopus::ffi::Result<
            (),
            Error,
        > as ::interoptopus::pattern::result::ResultAs>::AsT<*const Service>,
    >,
) -> ::interoptopus::pattern::asynk::TaskHandle {
    const { ::interoptopus::lang::types::assert_send_sync::<Service>() }
    const { ::interoptopus::lang::types::assert_send_sync::<Error>() }
    unsafe {
        use ::interoptopus::pattern::asynk::AsyncRuntime;
        let _runtime_arc = ::std::sync::Arc::from_raw(runtime);
        let _runtime_invoke = ::std::sync::Arc::clone(&_runtime_arc);
        let _runtime_inside = ::std::sync::Arc::clone(&_runtime_arc);
        ::std::mem::forget(_runtime_arc);
        let _guard = ::interoptopus::pattern::asynk::AsyncCallbackGuard::new(callback);
        _runtime_invoke
            .spawn(move |_ctx| async move {
                let _guard = _guard;
                let _async_runtime = ::interoptopus::pattern::asynk::Async::new(
                    _runtime_inside,
                    _ctx,
                );
                let _result = Service::create(_async_runtime).await;
                _guard.mark_completed();
                match _result {
                    ::interoptopus::ffi::Ok(service_instance) => {
                        let _cb_result: <::interoptopus::ffi::Result<
                            (),
                            Error,
                        > as ::interoptopus::pattern::result::ResultAs>::AsT<
                            *const Service,
                        > = ::interoptopus::ffi::Ok(
                            ::std::sync::Arc::into_raw(
                                ::std::sync::Arc::new(service_instance),
                            ) as *mut _,
                        );
                        callback.call_ok(&raw const _cb_result);
                        ::std::mem::forget(_cb_result);
                    }
                    ::interoptopus::ffi::Err(err) => {
                        let _cb_result = ::interoptopus::ffi::Err(err);
                        callback.call_ok(&raw const _cb_result);
                        ::std::mem::forget(_cb_result);
                    }
                    ::interoptopus::ffi::Result::Panic => {
                        let _cb_result: <::interoptopus::ffi::Result<
                            (),
                            Error,
                        > as ::interoptopus::pattern::result::ResultAs>::AsT<
                            *const Service,
                        > = ::interoptopus::ffi::Result::Panic;
                        callback.call_ok(&raw const _cb_result);
                        ::std::mem::forget(_cb_result);
                    }
                    ::interoptopus::ffi::Result::Null => {
                        let _cb_result: <::interoptopus::ffi::Result<
                            (),
                            Error,
                        > as ::interoptopus::pattern::result::ResultAs>::AsT<
                            *const Service,
                        > = ::interoptopus::ffi::Result::Null;
                        callback.call_ok(&raw const _cb_result);
                        ::std::mem::forget(_cb_result);
                    }
                }
            })
    }
}
#[allow(clippy::ptr_cast_constness)]
#[::interoptopus::ffi]
fn service_destroy(instance: *const Service) {
    if !instance.is_null() {
        unsafe {
            let _ = ::std::sync::Arc::from_raw(instance);
        }
    }
}
#[::interoptopus::ffi]
unsafe fn service_method(instance: *const Service) -> u32 {
    unsafe {
        let instance_ref = &*instance;
        instance_ref.method()
    }
}
unsafe impl ::interoptopus::lang::service::ServiceInfo for Service {
    fn id() -> ::interoptopus::inventory::ServiceId {
        ::interoptopus::inventory::ServiceId::from_id(::interoptopus::id!(Service))
    }
    fn service() -> ::interoptopus::lang::service::Service {
        ::interoptopus::lang::service::Service::new(
            <Service as ::interoptopus::lang::types::TypeInfo>::id(),
            vec![
                < service_create as ::interoptopus::lang::function::FunctionInfo > ::id()
            ],
            <service_destroy as ::interoptopus::lang::function::FunctionInfo>::id(),
            vec![
                < service_method as ::interoptopus::lang::function::FunctionInfo > ::id()
            ],
        )
    }
    fn register(inventory: &mut impl ::interoptopus::inventory::Inventory) {
        <Service as ::interoptopus::lang::types::TypeInfo>::register(inventory);
        <service_create as ::interoptopus::lang::function::FunctionInfo>::register(
            inventory,
        );
        <service_destroy as ::interoptopus::lang::function::FunctionInfo>::register(
            inventory,
        );
        <service_method as ::interoptopus::lang::function::FunctionInfo>::register(
            inventory,
        );
        inventory.register_service(Self::id(), Self::service());
    }
}
unsafe impl ::interoptopus::pattern::asynk::AsyncRuntimeService for Service {}
